Update portfolio_Deep Kumar Goenka_Contact Me.html

--- a/portfolio_Deep Kumar Goenka_Contact Me.html
+++ b/portfolio_Deep Kumar Goenka_Contact Me.html
@@ -33,9 +33,9 @@
             <h3 style="text-align: center; color: ivory;">Student of Information Technology</h3><br><br><br>
             <div>
                 <ul style="list-style: none;">
-                    <li class="clickme"><a href="file:///C:/xampp/htdocs/portfolio/portfolio_Deep%20Kumar%20Goenka_Portfolio.html" style="text-decoration: none;">PORTFOLIO</a></li><br>
-                    <li class="clickme"><a href="file:///C:/xampp/htdocs/portfolio/portfolio_Deep%20Kumar%20Goenka_My%20CV.html" style="text-decoration: none;">MY CV</a></li><br>
-                    <li class="clickme"><a href="file:///C:/xampp/htdocs/portfolio/portfolio_Deep%20Kumar%20Goenka_Contact%20Me.html" style="text-decoration: none;">CONTACT ME</a></li>
+                    <li class="clickme"><a href="https://deepgoenka.github.io/profile/portfolio_Deep%20Kumar%20Goenka_Portfolio.html" style="text-decoration: none;">PORTFOLIO</a></li><br>
+                    <li class="clickme"><a href="https://deepgoenka.github.io/profile/portfolio_Deep%20Kumar%20Goenka_My%20CV.html" style="text-decoration: none;">MY CV</a></li><br>
+                    <li class="clickme"><a href="https://deepgoenka.github.io/profile/portfolio_Deep%20Kumar%20Goenka_Contact%20Me.html" style="text-decoration: none;">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
