Update portfolio_Deep Kumar Goenka_Portfolio.html

--- a/portfolio_Deep Kumar Goenka_Portfolio.html
+++ b/portfolio_Deep Kumar Goenka_Portfolio.html
@@ -2,6 +2,7 @@
     <head>
         <title>Portfolio: Deep Kumar Goenka</title>
         <link rel="icon" href="icon.png">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style>
             .clickme a:link, .clickme a:visited{
                 border: 1px solid red;
@@ -29,6 +30,9 @@
                 cursor: pointer;
                 padding: 8px 15px;
                 margin-right: 20px;
+            }
+            .box a:hover{
+                color: red;
             }
         </style>
     </head>
