Update portfolio_Deep Kumar Goenka_My CV.html

--- a/portfolio_Deep Kumar Goenka_My CV.html
+++ b/portfolio_Deep Kumar Goenka_My CV.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>CV: Deep Kumar Goenka</title>
-        <link rel="icon" href="icon.png">
+        <link rel="icon" href="ic.png">
         <style>
             .clickme a:link, .clickme a:visited{
                 border: 1px solid red;
